bugs squashed, footer and divs on menus

--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ p{
     margin-bottom: 20px; /*Space AFTER image */
 }
 
+#hours {
+    margin-bottom: 50px;
+}
+
 footer {
     background-color: #333;
     color: white;
